# PMD

./: CMakeLists.txt
common/: string_func.h
dependencies/imgui/imgui-master/: CMakeLists.txt
dependencies/stb_image/: stb_image_write.h
models/car/: cropped_textured_mesh.mtl
models/house/: owings_upper_mill-metashape-1mil.mtl
src/: Application.cpp  Application.h  FileSystem.cpp  FileSystem.h  GUI.cpp  GUI.h  Input.cpp  Input.h  Mesh.cpp  Mesh.h  OBJReader.cpp  OBJReader.h  RenderMesh.cpp  RenderMesh.h  Shader.cpp  Shader.h  Simplify.cpp  Simplify.h  main.cpp
src/gl/: Buffer.cpp  Buffer.h  Texture.cpp  Texture.h
src/shaders/: fragment.glsl  vertex.glsl
